<resources>
    <!--每个人在自己区域内编码-->
    <!-- liuhuan start-->
    <string name="welcome">在宝宝乐 \n记录宝宝成长点滴 \n呵护宝宝健康发育</string>
    <string name="username">用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="username_input">请输入用户名</string>
    <string name="password_input">请输入密码，区分大小写</string>
    <string name="login">登&#160;陆</string>
    <string name="register">注&#160;册</string>
    <string name="remember">记住密码</string>
    <string name="forget_link"><a href="#" mce_href="#">忘记密码？</a></string>

    <!-- liuhuan end-->
    <!-- pengyiqun start-->


    <!-- pengyiqun end-->
    <!-- tangliwen start-->


    <!-- tangliwen end-->
    <!-- xumuchen start-->


    <!-- xumuchen end-->
    <!-- 贺逸峰 start-->
    <string name="app_name">HappyBaby</string>
    <string name="hhyifeng">hhyifeng</string>
    <!-- 贺逸峰 end-->
</resources>
